Removed setters for soap module